--- a/Noveras_Joshua-My_Resume.html
+++ b/Noveras_Joshua-My_Resume.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="Resume_Design.css"
 <body> 
     <div class="mix_ing">
-    <img src = "/Users/joshuanoveras/Desktop/Resume Picture/IMG_20220214_184604.JPEG">
+    <img src = "IMG_20220214_184604.JPEG">
     <h1>NOVERAS JOSHUA DAMASCO</h1>
     </div>
     <p>_________________________________________________________________________________</p>
