--- a/Noveras_Joshua-My_Resume.html
+++ b/Noveras_Joshua-My_Resume.html
@@ -13,6 +13,7 @@
         <h2>OBJECTIVE</h2>
         <p> A hard working and highly motivated person seeking a career where I can showcase my skills and talents while providing impactful and top tier work quality.</p>
     <p>_________________________________________________________________________________</p>
+        <h2>SKILLS</h2>    
             <p> * Can easily learn how to use/maneuver computer softwares</p>
             <p> * Content writing skills</p>
             <p> * Good verbal and written communication abilities </p>
